cka-setup/cka-setup.yaml
#
# Exercice RBAC
#
---
apiVersion: v1
kind: Namespace
metadata:
  name: rbac
  labels:
    name: rbac
---
apiVersion: v1
kind: Namespace
metadata:
  name: replicas
  labels:
    name: replicas
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: replicas
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: service
  labels:
    name: service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: network-policy-a
  labels:
    name: network-policy-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: network-policy-b
  labels:
    name: network-policy-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-a
  namespace: network-policy-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
      - name: app-a
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-b
  namespace: network-policy-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appb
  template:
    metadata:
      labels:
        app: appb
    spec:
      containers:
      - name: appb
        image: nginx
        ports:
        - containerPort: 80
---
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: network-policy-b
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: network-policy-a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: v1
kind: Namespace
metadata:
  name: extract-logs1
  labels:
    name: extract-logs1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-pod1
  namespace: extract-logs1
spec:
  selector:
    matchLabels:
      app: error-pod1
  template:
    metadata:
      labels:
        app: error-pod1
    spec:
      containers:
      - name: error-pod1
        image: busybox
        args: ["/bin/bash", "-c", "while true ; do echo \"I am an error container !\" && sleep 3; done"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Namespace
metadata:
  name: extract-logs2
  labels:
    name: extract-logs2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-pod2
  namespace: extract-logs2
spec:
  selector:
    matchLabels:
      app: error-pod2
  template:
    metadata:
      labels:
        app: error-pod2
    spec:
      containers:
      - name: error-pod2
        image: busybox
        args: ["/bin/sh", "-c", "while true ; do echo \"I am an error container !\" && sleep 3; done"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Namespace
metadata:
  name: sidecar
  labels:
    name: sidecar
---
apiVersion: v1
kind: Pod
metadata:
  name: sidecar
  namespace: sidecar
spec:
      containers:
      - name: sidecar
        image: busybox
        args: ["/bin/sh", "-c", "sleep 900; while true ; do echo \"Get my logs from sidecar !\" > /data/test.txt && sleep 3 && echo \"My true logs are on /data/test.txt file - Use a sidecar container !\" ; done"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: data
          mountPath: /data/
      volumes:
      - name: data
        emptyDir: {}
